Changes to Finish Assignment

--- a/WebApplication - Mission Assignment #6/Views/Home/About.cshtml
+++ b/WebApplication - Mission Assignment #6/Views/Home/About.cshtml
@@ -8,6 +8,6 @@
 </ul>
 <div class="text-center mt-3">
     <a href="https://baconsale.com/" target="_blank">
-        <img src="https://byu.box.com/s/ie6ibeddqm0f6oudp7bc5dyt87zxi2u4" alt="Baconsale" class="img-fluid" />
+        <img src="/images/Bacon Photo.jpg" alt="Bacon-Image" class="img-fluid" />
     </a>
 </div>
