--- a/WebApplication - Mission Assignment #6/Views/Home/Index.cshtml
+++ b/WebApplication - Mission Assignment #6/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿/* Index.cshtml - Home Page */
-@{
+﻿@{
     ViewData["Title"] = "Home";
 }
 <h1 class="text-center">The Joel Hilton Film Collection</h1>
 <div class="text-center">
-    <img src="https://byu.box.com/s/8sjz2qei13h4nnlw0e6gc10ot35octkf" alt="Joel Hilton" class="img-fluid" />
+    <img src="/images/Hilton Photo.jpg" alt="Joel Hilton" class="img-fluid" />
 </div>
